# simons-test

./: .gitignore  README.md  problem1.txt  problem2.txt  pyproject.toml
src/: main.py
tests/: test_problem_1.py  test_problem_2.py
