[tool.poetry]
name = "simons-test"
version = "0.1.0"
description = ""
authors = ["Jake Coates <Jake@aibor.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
